@@ -2,6 +2,12 @@
 = rufus-scheduler CHANGELOG.txt
 
 
+== rufus-scheduler - 1.0.10    not yet released
+
+- todo  #21357 : added Rufus::Scheduler::VERSION
+- bug   #21358 : start_new() not accepting parameters. Fixed.
+
+
 == rufus-scheduler - 1.0.9    released 2008/07/18
 
 - bug   #21262 : brought back (proxy) duration_to_f to Rufus::Scheduler
